[Restructure] Enhancements on security and structure, Removed debian

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -28,7 +28,7 @@ jobs:
 
     strategy:
       matrix:
-        flavor: [debian, ubi]
+        flavor: [ubi]
 
     steps:
       - name: Checkout source
