--- a/sftp/ubi/sshd_config.example
+++ b/sftp/ubi/sshd_config.example
@@ -1,10 +1,12 @@
 # -------------------------------
 # Basic Configuration
 # -------------------------------
-Port 22
+Port 2222
 Protocol 2
 AddressFamily any
 ListenAddress 0.0.0.0
+# No PID file needed for foreground daemon
+PidFile none
 
 # -------------------------------
 # Authentication Settings
@@ -12,17 +14,14 @@ ListenAddress 0.0.0.0
 PermitRootLogin no
 PasswordAuthentication no
 PermitEmptyPasswords no
-KbdInteractiveAuthentication no
 ChallengeResponseAuthentication no
 UsePAM yes
 AuthenticationMethods publickey
-PubkeyAuthentication yes
 
 # -------------------------------
 # Host Key Configuration
 # -------------------------------
 HostKey /etc/ssh/ssh_host_rsa_key
-HostKey /etc/ssh/ssh_host_ecdsa_key
 HostKey /etc/ssh/ssh_host_ed25519_key
 
 # -------------------------------
@@ -36,7 +35,7 @@ LoginGraceTime 30
 # -------------------------------
 # Connection Restrictions
 # -------------------------------
-AllowUsers user1
+AllowUsers sftp-user
 IgnoreRhosts yes
 IgnoreUserKnownHosts yes
 PermitUserEnvironment no
@@ -45,19 +44,13 @@ PermitUserEnvironment no
 # SSH Protocol Hardening
 # -------------------------------
 # Only strong key exchange algorithms
-KexAlgorithms curve25519-sha256,curve25519-sha256@libssh.org,ecdh-sha2-nistp256,ecdh-sha2-nistp384,ecdh-sha2-nistp521,diffie-hellman-group-exchange-sha256
+KexAlgorithms curve25519-sha256,curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256
 
 # Only strong ciphers
-Ciphers chacha20-poly1305@openssh.com,aes256-gcm@openssh.com,aes128-gcm@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
+Ciphers chacha20-poly1305@openssh.com,aes256-gcm@openssh.com,aes256-ctr
 
 # Only secure MACs
-MACs umac-128-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-sha2-512-etm@openssh.com,hmac-sha2-256,hmac-sha2-512
-
-# Additional Debian-specific hardening
-ClientAliveInterval 300
-ClientAliveCountMax 2
-MaxStartups 10:30:100
-MaxSessions 4
+MACs hmac-sha2-512,hmac-sha2-256
 
 # Disable legacy and insecure options
 UseDNS no
@@ -72,9 +65,16 @@ Banner none
 Subsystem sftp internal-sftp -l INFO
 
 # Restrict user to SFTP only with chroot
-Match User user1
-    ChrootDirectory /home/user1
-    ForceCommand internal-sftp -l INFO
-    AllowTcpForwarding no
-    X11Forwarding no
-    PermitTTY no
+Match User sftp-user Address 172.21.0.1
+  ChrootDirectory /sftp/sftp-user
+  ForceCommand internal-sftp -l INFO
+  AllowTcpForwarding no
+  X11Forwarding no
+  PermitTTY no
+
+# Block user from all other IPs
+Match User sftp-user
+  ForceCommand echo "Access denied from this IP"
+  PermitTTY no
+  AllowTcpForwarding no
+  X11Forwarding no
